feature: support multiple application on single server - add doc - fix #3645